# PersonnalDevikaFile

./: .env.example  .gitignore  .pre-commit-config.yaml  0.0.1  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  exp.ipynb  main.py  prompts.yaml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.sh  terminal.py  test_search.py
Reference Files/: stitionai-devika.txt
agent/core/: knowledge_base.py
docs/architecture/: ARCHITECTURE.md  UNDER_THE_HOOD.md
output/: code_20250618_162602.py  code_20250618_163124.py
src/: README.md  __init__.py  cli.py  config.py  init.py  logger.py  main.py  project.py  socket_instance.py  state.py
src/Agentres/: __init__.py  cli.py  config.py  project.py  state.py
src/Agentres/agents/: agent.py  agents.py  base_agent.py  storage.py
src/Agentres/browser/: __init__.py  search.py
src/Agentres/config/: config.py
src/Agentres/database/: database.py
src/Agentres/documenter/: graphwiz.py
src/Agentres/file_manager/: file_manager.py
src/Agentres/filesystem/: read_code.py
src/Agentres/knowledge_base/: knowledge_base.py
src/Agentres/llm/: azure_openai_client.py  llm.py  llm.py.bak
src/Agentres/memory/: __init__.py
src/Agentres/utils/: __init__.py  conversation_namer.py  error_handler.py  file_manager.py  logger.py  prompt_manager.py  token_tracker.py
src/Agentres/workflow/: workflow_context.py  workflow_manager.py  workflow_state.py
src/agentres/: .gitignore  prompts.yaml  requirements.txt  setup.py
src/agentres/Reference Files/: openai-swarm.txt
src/agentres/src/: init.py  main.py
src/agents/: __init__.py  agent.py  base_agent.py  orchestrator.py
src/agents/action/: action.py
src/agents/answer/: answer.py
src/agents/coder/: coder.py
src/agents/decision/: decision.py
src/apis/: project.py  status.py
src/bert/: sentence.py
src/browser/: browser.py  interaction.py  search.py
src/config/: config.py
src/database/: database.py
src/documenter/: pdf.py
src/file_manager/: file_manager.py
src/filesystem/: __init__.py  file_manager.py  read_code.py
src/knowledge_base/: knowledge_base.py
src/llm/: azure_openai_client.py  llm.py
src/memory/: __init__.py  memory.py
src/prompts/: prompt_manager.py  prompts.yaml
src/services/: terminal_runner.py  utils.py
src/utils/: cache.py  conversation_namer.py  error_handler.py  logger.py  metrics.py  rate_limiter.py  retry.py  run_logger.py  text_processor.py  token_tracker.py
src/workflow/: workflow_manager.py
tests/unit/: test_agents.py  test_knowledge_base.py  test_logger.py  test_orchestrator.py  test_project.py  test_socket_instance.py  test_state.py
ui/: package-lock.json  package.json
ui/src/: app.html  app.pcss
venv_py310_new/: pyvenv.cfg
venv_py310_new/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
(+44 files in other folders)
