[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,venv,.mypy_cache,.pytest_cache
max-complexity = 10
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
known_first_party = ["agentres"]
known_third_party = ["aiohttp", "pytest", "pydantic"]
